# nand2tetris

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: regression-tests.yml
01/: And.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Xor.hdl
02/: ALU.hdl  Add16.hdl  Inc16.hdl
03/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl
04/Fill/: Fill.asm
04/Mult/: Mult.asm
05/: CPU.hdl  Computer.hdl  Memory.hdl
06/: __init__.py  assembler.py  hack_code.py  parser.py  run_regression_tests.sh  symbol.py
07/: codewriter.py  memo.md  parser.py  vmtranslator.py
07/sample/BasicTest/: BasicTest.asm
07/sample/SimpleAdd/: SimpleAdd.asm
07/sample/StaticTest/: StaticTest.asm
07_08/: codewriter.py  parser.py  run_regression_tests.sh  test.sh  test_runner.py  vmtranslator.py
07_08/sample/BasicLoop/: BasicLoop.asm
07_08/sample/BasicTest/: BasicTest.asm
07_08/sample/FibonacciElement/: FibonacciElement.asm
07_08/sample/FibonacciSeries/: FibonacciSeries.asm
07_08/sample/NestedCall/: NestedCall.asm
07_08/sample/PointerTest/: PointerTest.asm
07_08/sample/SimpleAdd/: SimpleAdd.asm
07_08/sample/SimpleFunction/: SimpleFunction.asm
10/: compilation_engine.py  jack_analyzer.py  jack_tokenizer.py  run_regression_tests.sh  symbol.py
10_11/: char_code.py  compilation_engine.py  jack_analyzer.py  jack_tokenizer.py  run_regression_tests.sh  vm_writer.py
12/: Array.jack  Math.jack  Memory.jack  Screen.jack
project01/: Mux4Way16.hdl  Mux8Way16.hdl  Not16.hdl  Or.hdl  Or8Way.hdl
project02/: FullAdder.hdl
(+11 files in other folders)
